refactoring install script to not include source-code in the image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ data:
      - /var/lib/mysql
      - /home/frappe/frappe-bench/sites/site1.local
 
-#erpnext:
-#    image: urbanandco/erpnext:6.0
-#    volumes_from:
-#       - data
-#    ports:
-#       - "80:80"
-#    hostname: "erpnext.localhost.com"
+erpnext:
+    image: urbanandco/erpnext:6.3.2
+    volumes_from:
+       - data
+    ports:
+       - "80:80"
+    hostname: "erpnext.localhost.com"
